fix: maintain consistent overflow-y between page transitions

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,7 @@ html {
   background-color: #f3f3f3;
   scroll-behavior: smooth;
   font-family: Roboto, sans-serif;
+  overflow-y: scroll;
 }
 
 a {
